# git-workflow-historian

./: .dockerignore  .env.example  .gitignore  DESIGN_SPEC.md  Dockerfile  README.md  plan.md  pyproject.toml
app/: agent.py  runner.py
mcp_server/: __init__.py  git_tools.py  server.py
service/: __init__.py  main.py
tests/: conftest.py
tests/eval/: eval_config.json  prepare_eval_assets.py  run_adk_eval.py
tests/unit/: test_agent_config.py  test_git_tools.py  test_mcp_server.py  test_service_api.py
